// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas Para el componente GigGrid Debe de Mostrar Items Cuando se cargan imagenes con el <useFetchGif/> 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One piece 
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Titulo cualquiera"
      url="https://localhost/images/imagen.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Titulo cualquiera 2"
      url="https://localhost/images/imagen.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas Para el componente GigGrid El componente me debe renderizar y Hacer un SnapShot  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One piece 
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
